# swifterpm

./: .gitignore  BUILD.bazel  Cargo.toml  Info.plist  MODULE.bazel  Package.resolved  Package.swift  README.md  blick.toml  mise.toml
.blick/skills/swifterpm-swift-review/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: blick-learn.yml  blick.yml  release.yml  swifterpm.yml
Sources/swifterpm/: AsyncFileSystem.swift  CLI.swift  Cache.swift  Environment.swift  FileSystemSupport.swift  GitHub.swift  Manifest.swift  Models.swift  PackageInfoCache.swift  Registry.swift  Remote.swift  ResolutionProgress.swift  Resolve.swift  Restore.swift  SemVer.swift  Support.swift  SwiftPMResolver.swift  SwifterPM.swift  main.swift
Tests/swifterpmTests/: AsyncFileSystemTests.swift  CLIRunnerTests.swift  CLITests.swift  CacheTests.swift  FileSystemSupportTests.swift  FixtureResolutionTests.swift  GitHubTests.swift  GitLabTests.swift  MainTests.swift  ManifestTests.swift  ModelAndCacheTests.swift  ModelsTests.swift  PackageInfoCacheTests.swift  RegistryTests.swift  RemoteTests.swift  ResolutionProgressTests.swift  ResolveTests.swift  RestoreProgressReporterTests.swift  RestoreTests.swift  SemVerTests.swift  SupportTests.swift  SwiftPMResolverTests.swift  TestSupport.swift  main.swift
benchmark-results-0.3.0-hyperfine/: firefox-ios-cold.json  firefox-ios-cold.md  pocket-casts-ios-cold.json  pocket-casts-ios-cold.md  pocket-casts-ios-warm.json  pocket-casts-ios-warm.md  resolution-latest.md
e2e/: resolution_spec.sh
e2e/fixtures/swifterpm/: registry-server.py
mise/tasks/benchmark/: resolution.sh
mise/tasks/release/: package.sh
mise/tasks/test/: e2e.sh  shellspec.sh  unit.sh
spec/: resolution_spec.sh
src/: cache.rs  cli.rs  github.rs  lib.rs  main.rs  manifest.rs  package_info_cache.rs  registry.rs  remote.rs  resolve.rs  resolved.rs  restore.rs  solver.rs  util.rs
swifterpm/internal/: swifterpm_tool_repo.bzl
