load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_test")
load("@rules_apple//apple:macos.bzl", "macos_command_line_application")
load("@rules_apple//apple:versioning.bzl", "apple_bundle_version")

swift_library(
    name = "swifterpm_sources",
    srcs = glob([
        "Sources/swifterpm/*.swift",
    ]),
    deps = [
        "@swift_argument_parser//:ArgumentParser",
        "@swiftpkg_swift_nio//:_NIOFileSystem",
    ],
    visibility = ["//visibility:public"],
)

swift_test(
    name = "swifterpm_tests",
    data = glob(["Tests/swifterpmTests/Fixtures/**"]),
    discover_tests = False,
    srcs = glob(
        [
            "Sources/swifterpm/*.swift",
            "Tests/swifterpmTests/*.swift",
        ],
        exclude = ["Sources/swifterpm/main.swift"],
    ),
    deps = [
        "@swift_argument_parser//:ArgumentParser",
        "@swiftpkg_swift_nio//:_NIOFileSystem",
    ],
)

swift_binary(
    name = "swifterpm",
    srcs = glob([
        "Sources/swifterpm/*.swift",
    ]),
    deps = [
        "@swift_argument_parser//:ArgumentParser",
        "@swiftpkg_swift_nio//:_NIOFileSystem",
    ],
    visibility = ["//visibility:public"],
)

apple_bundle_version(
    name = "swifterpm_version",
    build_version = "0.1.0",
    short_version_string = "0.1.0",
)

macos_command_line_application(
    name = "swifterpm_macos",
    bundle_id = "dev.tuist.swifterpm",
    infoplists = [":Info.plist"],
    minimum_os_version = "15.0",
    version = ":swifterpm_version",
    deps = [":swifterpm_sources"],
    visibility = ["//visibility:public"],
)
